fixed overflow on activity table

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -76,6 +76,10 @@
   height:auto;
 }
 
+#tablecontainer {
+    overflow: auto;
+}
+
 #previews {
   text-align: center;
 }
